# gracec

./: dune-project
lib/: ast.ml  debug_utils.ml  dune  lexer.mll  parser.mly  syntax.ml  tokens.mly
test/: dune  grace.ml  lexer.expected  lexer.ml  parser.expected  parser.ml
test/programs/: program.grc  program1.grc
