(lang dune 3.11)
(using menhir 2.1)

(package
 (name gracec)
 (synopsis "A simple compiler for a programming language called Grace")
 (source
  (github username/reponame))
 (authors
  "Georgios Alexios Kapetanakis <george.kapetanakis.gk@gmail.com>"
  "Dimitrios Georgousis")
 (license ISC)
 (depends ocaml dune))
